Fix spacing

--- a/styles.css
+++ b/styles.css
@@ -164,6 +164,10 @@ section:nth-of-type(3) .project:hover {
 section:nth-of-type(3) .project a {
     text-decoration: none;
     color: inherit;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 section:nth-of-type(3) .project h3 {
